--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "materialize-css": "^1.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-jitsi": "^1.0.4",
+    "react-jutsu": "^3.0.1",
     "react-scripts": "2.1.1",
     "ua-parser-js": "^0.7.22"
   },
